--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,26 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "@pinecone-database/pinecone": "^1.1.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^5.2.1",
-    "multer": "^2.0.2"
+    "firebase-admin": "^12.7.0",
+    "multer": "^2.0.2",
+    "openai": "^4.20.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
