--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express": "^5.2.1",
     "firebase-admin": "^12.7.0",
     "multer": "^2.0.2",
-    "openai": "^4.20.1"
+    "openai": "^4.20.1",
+    "pdf-parse": "^2.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
