--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,12 +13,12 @@ RUN npm install --production
 # Copy application files
 COPY . .
 
-# Expose port
-EXPOSE 5000
+# Expose port (Cloud Run uses PORT env variable, defaults to 8080)
+EXPOSE 8080
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD node -e "require('http').get('http://localhost:5000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+    CMD node -e "require('http').get('http://localhost:' + (process.env.PORT || 8080) + '/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 # Start the application
 CMD ["node", "server.js"]
