--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,6 +5,9 @@ runConfig:
   minInstances: 0
   maxInstances: 4
   concurrency: 80
+  
+# Tell Firebase where to find the backend code
+rootDirectory: backend
 
 env:
   - variable: OPENAI_API_KEY
