Update production environment with correct backend URL and Firebase config

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,10 +1,11 @@
 # Production Environment Variables
-# Replace these with your actual production values
+# Backend API URL
+VITE_API_URL=https://teachai-api--try1-7d848.us-east4.hosted.app/api
 
-VITE_API_URL=https://your-backend-url.com
-VITE_FIREBASE_API_KEY=your-firebase-api-key
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=AIzaSyCMqj-eHi1t3Hok4iE3L5rFuboTg5U8m-I
 VITE_FIREBASE_AUTH_DOMAIN=try1-7d848.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=try1-7d848
-VITE_FIREBASE_STORAGE_BUCKET=try1-7d848.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-VITE_FIREBASE_APP_ID=your-app-id
+VITE_FIREBASE_STORAGE_BUCKET=try1-7d848.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=632927777196
+VITE_FIREBASE_APP_ID=1:632927777196:web:44539afbe00fc1675b8a09
