Added Web Analysis feature with PDF/Image support and unified UI

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "build": "cd frontend && npm install && npm run build",
     "start": "cd frontend && npm run preview"
   },
-  "description": "TeachAI - AI-powered teaching assistant platform"
+  "description": "TeachAI - AI-powered teaching assistant platform",
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1"
+  }
 }
