--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,19 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@pinecone-database/pinecone": "^1.1.2",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.2.1",
     "firebase-admin": "^12.7.0",
     "multer": "^2.0.2",
-    "openai": "^4.20.1",
-    "pdf-parse": "^2.4.5"
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
+    "puppeteer": "^24.34.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
