--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/generative-ai": "0.1.3",
     "@pinecone-database/pinecone": "^1.1.2",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
