--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,26 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo "Error: no test specified" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "@google/generative-ai": "0.1.3",
-    "@pinecone-database/pinecone": "^1.1.2",
-    "axios": "^1.13.2",
-    "cheerio": "^1.1.2",
+    "@google-cloud/storage": "^7.7.0",
+    "@google/generative-ai": "^0.1.3",
+    "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^5.2.1",
-    "firebase-admin": "^12.7.0",
-    "multer": "^2.0.2",
-    "pdf-lib": "^1.17.1",
-    "pdf-parse": "^2.4.5",
-    "pdf2json": "^4.0.0",
-    "puppeteer": "^24.34.0"
+    "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "puppeteer": "^21.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.11"
   }
 }
