--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,20 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo "Error: no test specified" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
     "@google/generative-ai": "^0.1.3",
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^6.15.0",
     "pdf-parse": "^1.1.1",
     "puppeteer": "^21.7.0"
   },
