--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,28 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "@google-cloud/storage": "^7.7.0",
     "@google/generative-ai": "^0.1.3",
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
+    "canvas": "^3.2.0",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
+    "form-data": "^4.0.5",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "openai": "^6.15.0",
+    "path-is-absolute": "^1.0.1",
     "pdf-parse": "^1.1.1",
-    "puppeteer": "^21.7.0"
+    "pdf-table-extractor": "^1.0.3",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^3.11.174",
+    "puppeteer": "^21.7.0",
+    "textract": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
