--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "description": "TeachAI - AI-powered teaching assistant platform",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1"
+    "@google/generative-ai": "^0.24.1",
+    "canvas": "^3.2.0"
   }
 }
